# Lab_RT

./: .gitignore  App.py  README.md  requirements.txt
app/: __init__.py
app/routes/: captcha.py  fingerprint.py  hta.py  main.py
app/utils/: logging.py
logs/: actions.csv  fingerprints.csv
rust/: Cargo.toml
rust/src/: main.rs
static/: style.css
static/js/: fingerprint.js
static/payloads/: Revisão.xlsx
templates/: aguardando.html  captcha.html  fp_page.html  index.html  success.html
