[package]
name = "rusta-stager"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "native-tls"] }   # ← Mudança aqui
sysinfo = "0.33"
env_logger = "0.11"
log = "0.4"
obfstr = "0.4"
rand = "0.8"
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation"
]}