[package]
name = "rusta-stager"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
obfstr = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
sysinfo = "0.33"

# ==================== WINDOWS API (versão recomendada) ====================
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
]}
# =======================================================================